// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/dws-provision-reports/_officeId/_userId/_providedIn/index.vue delete dwsProvisionReport button should be rendered when reportData.status is DwsProvisionReportStatus.fixed 1`] = `
<a
  class="v-btn-stub"
  color="danger"
  data-delete-dws-provision-report-button=""
  text=""
>
  <v-icon-stub
    left=""
  >
    M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
  </v-icon-stub>
            削除
</a>
`;

exports[`pages/dws-provision-reports/_officeId/_userId/_providedIn/index.vue delete dwsProvisionReport button should be rendered when reportData.status is DwsProvisionReportStatus.inProgress 1`] = `
<a
  class="v-btn-stub"
  color="danger"
  data-delete-dws-provision-report-button=""
  text=""
>
  <v-icon-stub
    left=""
  >
    M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
  </v-icon-stub>
            削除
</a>
`;

exports[`pages/dws-provision-reports/_officeId/_userId/_providedIn/index.vue initial view should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  data-page-dws-provision-report=""
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <v-row-stub
    class="align-stretch"
    tag="div"
  >
    <v-col-stub
      class="align-stretch d-flex py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <div
        class="z-data-card-stub"
        title="基本情報"
      >
        <div
          class="z-data-card-stub-slot-actions"
        />
        <z-data-card-item-stub
          data-office-abbr=""
          dataofficeabbr=""
          icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
          label="事業所"
        >
          <a>
            新潟
          </a>
        </z-data-card-item-stub>
        <z-data-card-item-stub
          icon="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7,13H17V11H7"
          label="状態"
          value="未作成"
        />
        <v-card-actions-stub
          tag="div"
        >
          <v-spacer-stub
            tag="div"
          />
          <a
            class="v-btn-stub"
            color="primary"
            data-download-preview=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
            </v-icon-stub>
            サービス提供実績記録票をダウンロード
          </a>
        </v-card-actions-stub>
        <div
          class="z-data-card-stub-slot-header"
        />
      </div>
    </v-col-stub>
    <v-col-stub
      class="py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <z-user-card-stub
        user="[object Object]"
      />
    </v-col-stub>
  </v-row-stub>
  <div
    class="z-data-card-stub"
    title="予定・実績"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <v-container-stub
      tag="div"
    >
      <v-row-stub
        dense="true"
        justify="center"
        tag="div"
      >
        <v-col-stub
          cols="12"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <z-flex-stub>
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-month=""
              text=""
            >
              前月
            </a>
            <z-date-field-stub
              class="flex-grow-1"
              errormessages=""
              hide-details=""
              label="サービス提供年月"
              max="2018-08"
              type="month"
              usejapaneseera="true"
              value="2021-02"
            />
            <a
              class="v-btn-stub"
              color="primary"
              data-next-month=""
              text=""
            >
              次月
            </a>
          </z-flex-stub>
        </v-col-stub>
        <v-col-stub
          class="mt-6 mt-sm-0"
          cols="12"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <z-flex-stub>
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-user=""
              text=""
            >
              前へ
            </a>
            <z-select-stub
              appendicon="$dropdown"
              backgroundcolor="#f1f6fa"
              class="ma-0"
              clearicon="$clear"
              dense="true"
              errorcount="1"
              errormessages=""
              itemcolor="primary"
              itemdisabled="disabled"
              items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              itemtext="text"
              itemvalue="value"
              label="利用者"
              loaderheight="2"
              menuprops="[object Object]"
              messages=""
              nodatatext="$vuetify.noDataText"
              outlined="true"
              rules=""
              successmessages=""
              type="text"
              value="20"
              valuecomparator="[Function]"
            />
            <a
              class="v-btn-stub"
              color="primary"
              data-next-user=""
              text=""
            >
              次へ
            </a>
          </z-flex-stub>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        dense="true"
        justify="center"
        tag="div"
      >
        <v-col-stub
          cols="6"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-add-plan=""
          >
            <v-icon-stub
              left=""
            >
              M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
            </v-icon-stub>
            予定を追加
          </a>
        </v-col-stub>
        <v-col-stub
          cols="6"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-add-result=""
          >
            <v-icon-stub
              left=""
            >
              M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
            </v-icon-stub>
            実績を追加
          </a>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        dense="true"
        tag="div"
      >
        <v-col-stub
          cols="12"
          tag="div"
        >
          <z-overflow-shadow-stub>
            <v-simple-table-stub
              class="itemTable"
              dense="true"
            >
              <thead>
                <tr>
                  <th
                    class="text-center"
                    rowspan="2"
                    style="min-width: 38px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      日付
                    </span>
                  </th>
                  <th
                    class="text-center"
                    rowspan="2"
                    style="min-width: 36px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      曜日
                    </span>
                  </th>
                  <th
                    colspan="4"
                    style="min-width: 50px;"
                  >
                    予定
                  </th>
                  <th />
                  <th
                    colspan="4"
                    style="min-width: 50px;"
                  >
                    実績
                  </th>
                  <th
                    class="text-right"
                    rowspan="2"
                    style="min-height: 50px; min-width: 34px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      提供人数
                    </span>
                  </th>
                  <th
                    class="text-center"
                    rowspan="2"
                    style="width: 36px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      備考
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="text-center checkbox"
                  >
                    <z-flex-stub
                      class="justify-center checkboxWrapper"
                    >
                      <v-simple-checkbox-stub
                        indeterminateicon="$checkboxIndeterminate"
                        officon="$checkboxOff"
                        onicon="$checkboxOn"
                      />
                    </z-flex-stub>
                  </th>
                  <th
                    style="min-width: 284px;"
                  >
                    <div>
                      提供時間
                    </div>
                    <div>
                      サービス区分
                    </div>
                  </th>
                  <th
                    class="text-right"
                    style="min-height: 38px; min-width: 42px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      時間数
                    </span>
                  </th>
                  <th
                    class="text-right"
                    style="min-height: 38px; min-width: 42px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      移動
                    </span>
                  </th>
                  <th
                    style="min-width: 40px;"
                  >
                    <a
                      class="v-btn-stub"
                      color="primary"
                      icon=""
                      small=""
                      text=""
                    >
                      <v-icon-stub>
                        M4,15V9H12V4.16L19.84,12L12,19.84V15H4Z
                      </v-icon-stub>
                    </a>
                  </th>
                  <th
                    class="text-center checkbox"
                  >
                    <z-flex-stub
                      class="justify-center checkboxWrapper"
                    >
                      <v-simple-checkbox-stub
                        indeterminateicon="$checkboxIndeterminate"
                        officon="$checkboxOff"
                        onicon="$checkboxOn"
                      />
                    </z-flex-stub>
                  </th>
                  <th
                    style="min-width: 284px;"
                  >
                    <div>
                      提供時間
                    </div>
                    <div>
                      サービス区分
                    </div>
                  </th>
                  <th
                    class="text-right"
                    style="min-height: 38px; min-width: 42px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      時間数
                    </span>
                  </th>
                  <th
                    class="text-right"
                    style="min-height: 38px; min-width: 42px;"
                  >
                    <span
                      class="writingVertical"
                    >
                      移動
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    colspan="13"
                    style="height: 0px;"
                  />
                </tr>
              </thead>
              <tbody>
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <z-with-stub
                  tag="tr"
                  value="[object Object]"
                />
                <tr
                  class="dummyRow"
                />
              </tbody>
            </v-simple-table-stub>
          </z-overflow-shadow-stub>
        </v-col-stub>
      </v-row-stub>
      <!---->
      <v-row-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
        <v-col-stub
          cols="12"
          md="6"
          tag="div"
        >
          <v-simple-table-stub
            dense="true"
          >
            <thead>
              <tr>
                <td>
                  サービス区分
                </td>
                <td
                  class="text-right"
                >
                  予定時間数計
                </td>
                <td
                  class="text-right"
                >
                  実績時間数計
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  居宅介護:身体介護
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
              </tr>
              <tr>
                <td>
                  居宅介護:通院等介助（身体を伴う）
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
              </tr>
              <tr>
                <td>
                  居宅介護:家事援助
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
              </tr>
              <tr>
                <td>
                  居宅介護:通院等介助（身体を伴わない）
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
              </tr>
              <tr>
                <td>
                  重度訪問介護
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
              </tr>
              <tr>
                <td>
                  重度訪問介護（移動介護）
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
                <td
                  class="text-right"
                >
                  0.00
                </td>
              </tr>
            </tbody>
          </v-simple-table-stub>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        class="pt-4"
        dense="true"
        justify="end"
        tag="div"
      >
        <v-col-stub
          class="d-flex justify-center"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-copy-plans=""
          >
            <v-icon-stub
              left=""
            >
              M2,2H16V16H2V2M22,8V22H8V18H18V8H22M4,4V14H14V4H4Z
            </v-icon-stub>
            前月から予定をコピー
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="accent"
            data-save=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
            </v-icon-stub>
            保存
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            class="flex-grow-1 v-btn-stub"
            color="accent"
            data-confirm=""
          >
            <v-icon-stub
              left=""
            >
              M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z
            </v-icon-stub>
            予実を確定する
          </a>
        </v-col-stub>
        <!---->
      </v-row-stub>
    </v-container-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-dws-provision-report-item-form-dialog-stub
    officeid="10"
    providedin="2021-02"
    target=""
    value="[object Object]"
    width="75%"
  />
  <!---->
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
</div>
`;

exports[`pages/dws-provision-reports/_officeId/_userId/_providedIn/index.vue initial view when provision report is fixed should not be able to edit 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  data-page-dws-provision-report=""
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <v-row-stub
    class="align-stretch"
    tag="div"
  >
    <v-col-stub
      class="align-stretch d-flex py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <div
        class="z-data-card-stub"
        title="基本情報"
      >
        <div
          class="z-data-card-stub-slot-actions"
        />
        <z-data-card-item-stub
          data-office-abbr=""
          dataofficeabbr=""
          icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
          label="事業所"
        >
          <a>
            新潟
          </a>
        </z-data-card-item-stub>
        <z-data-card-item-stub
          icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
          label="状態"
          value="確定済（-）"
        />
        <v-card-actions-stub
          tag="div"
        >
          <v-spacer-stub
            tag="div"
          />
          <a
            class="v-btn-stub"
            color="primary"
            data-download-preview=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
            </v-icon-stub>
            サービス提供実績記録票をダウンロード
          </a>
        </v-card-actions-stub>
        <div
          class="z-data-card-stub-slot-header"
        />
      </div>
    </v-col-stub>
    <v-col-stub
      class="py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <z-user-card-stub
        user="[object Object]"
      />
    </v-col-stub>
  </v-row-stub>
  <div
    class="z-data-card-stub"
    title="予定・実績"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <v-container-stub
      tag="div"
    >
      <v-row-stub
        dense="true"
        justify="center"
        tag="div"
      >
        <v-col-stub
          cols="12"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <z-flex-stub>
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-month=""
              text=""
            >
              前月
            </a>
            <div
              class="flex-grow-1 z-date-field"
              hide-details=""
              max="2018-08"
            >
              <div
                class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: -24px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <label
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        サービス提供年月
                      </label>
                      <input
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <v-dialog-stub
                closedelay="0"
                contentclass=""
                data-z-date-field-dialog=""
                opendelay="0"
                origin="center center"
                retainfocus="true"
                transition="dialog-transition"
                width="290px"
              >
                <v-date-picker-stub
                  data-z-date-field-picker=""
                  dayformat="[Function]"
                  eventcolor="warning"
                  firstdayofweek="1"
                  headerdateformat="[Function]"
                  locale="ja-JP"
                  localefirstdayofyear="0"
                  max="2018-08"
                  min="1920-01-01"
                  nexticon="$next"
                  nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                  nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                  notitle="true"
                  previcon="$prev"
                  prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                  prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                  selecteditemstext="$vuetify.datePicker.itemsSelected"
                  showcurrent="true"
                  titledateformat="[Function]"
                  type="month"
                  value="2021-02-01"
                  width="290"
                  yearformat="[Function]"
                >
                  <v-spacer-stub
                    tag="div"
                  />
                  <!---->
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-cancel=""
                    text=""
                  >
                    キャンセル
                  </a>
                </v-date-picker-stub>
              </v-dialog-stub>
            </div>
            <a
              class="v-btn-stub"
              color="primary"
              data-next-month=""
              text=""
            >
              次月
            </a>
          </z-flex-stub>
        </v-col-stub>
        <v-col-stub
          class="mt-6 mt-sm-0"
          cols="12"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <z-flex-stub>
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-user=""
              text=""
            >
              前へ
            </a>
            <div
              class="v-input ma-0 v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      利用者
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                      value="20"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <a
              class="v-btn-stub"
              color="primary"
              data-next-user=""
              text=""
            >
              次へ
            </a>
          </z-flex-stub>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        dense="true"
        justify="center"
        tag="div"
      >
        <v-col-stub
          cols="6"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-add-plan=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
            </v-icon-stub>
            予定を追加
          </a>
        </v-col-stub>
        <v-col-stub
          cols="6"
          lg="3"
          md="4"
          sm="5"
          tag="div"
          xl="2"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-add-result=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
            </v-icon-stub>
            実績を追加
          </a>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        dense="true"
        tag="div"
      >
        <v-col-stub
          cols="12"
          tag="div"
        >
          <z-overflow-shadow-stub>
            <div
              class="v-data-table v-data-table--dense theme--light itemTable"
            >
              <div
                class="v-data-table__wrapper"
              >
                <table>
                  <thead>
                    <tr>
                      <th
                        class="text-center"
                        rowspan="2"
                        style="min-width: 38px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          日付
                        </span>
                      </th>
                      <th
                        class="text-center"
                        rowspan="2"
                        style="min-width: 36px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          曜日
                        </span>
                      </th>
                      <th
                        colspan="4"
                        style="min-width: 50px;"
                      >
                        予定
                      </th>
                      <th />
                      <th
                        colspan="4"
                        style="min-width: 50px;"
                      >
                        実績
                      </th>
                      <th
                        class="text-right"
                        rowspan="2"
                        style="min-height: 50px; min-width: 34px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          提供人数
                        </span>
                      </th>
                      <th
                        class="text-center"
                        rowspan="2"
                        style="width: 36px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          備考
                        </span>
                      </th>
                    </tr>
                    <tr>
                      <th
                        class="text-center checkbox"
                      >
                        <z-flex-stub
                          class="justify-center checkboxWrapper"
                        >
                          <div
                            class="v-simple-checkbox v-simple-checkbox--disabled"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--disabled mdi mdi-checkbox-blank-outline theme--light"
                              />
                            </div>
                          </div>
                        </z-flex-stub>
                      </th>
                      <th
                        style="min-width: 284px;"
                      >
                        <div>
                          提供時間
                        </div>
                        <div>
                          サービス区分
                        </div>
                      </th>
                      <th
                        class="text-right"
                        style="min-height: 38px; min-width: 42px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          時間数
                        </span>
                      </th>
                      <th
                        class="text-right"
                        style="min-height: 38px; min-width: 42px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          移動
                        </span>
                      </th>
                      <th
                        style="min-width: 40px;"
                      >
                        <!---->
                      </th>
                      <th
                        class="text-center checkbox"
                      >
                        <z-flex-stub
                          class="justify-center checkboxWrapper"
                        >
                          <div
                            class="v-simple-checkbox v-simple-checkbox--disabled"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--disabled mdi mdi-checkbox-blank-outline theme--light"
                              />
                            </div>
                          </div>
                        </z-flex-stub>
                      </th>
                      <th
                        style="min-width: 284px;"
                      >
                        <div>
                          提供時間
                        </div>
                        <div>
                          サービス区分
                        </div>
                      </th>
                      <th
                        class="text-right"
                        style="min-height: 38px; min-width: 42px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          時間数
                        </span>
                      </th>
                      <th
                        class="text-right"
                        style="min-height: 38px; min-width: 42px;"
                      >
                        <span
                          class="writingVertical"
                        >
                          移動
                        </span>
                      </th>
                    </tr>
                    <tr>
                      <th
                        colspan="13"
                        style="height: 0px;"
                      />
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-center"
                      >
                      22
                      </td>
                      <td
                        class="text-center"
                      >
                      月
                      </td>
                      <td
                        class="text-center"
                      >
                        <z-flex-stub
                          class="justify-center checkboxWrapper"
                        >
                          <div
                            class="v-simple-checkbox v-simple-checkbox--disabled"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--disabled mdi mdi-checkbox-blank-outline theme--light"
                              />
                            </div>
                          </div>
                        </z-flex-stub>
                      </td>
                      <td
                        class="pt-1 pb-1 clickable"
                      >
                        <div>
                          <time
                            datetime="19:00"
                          >
                            19:00
                          </time>
                          <span>
                            〜
                          </span>
                          <time
                            datetime="23:20"
                          >
                            23:20
                          </time>
                        </div>
                        <div>
                          <!---->
                          居宅：身体介護
                        </div>
                      </td>
                      <td
                        class="text-right"
                      >
                        4.3
                      </td>
                      <td
                        class="text-right"
                      >
                        1.5
                      </td>
                      <td>
                        <!---->
                      </td>
                      <td
                        class="text-center"
                      >
                        <z-flex-stub
                          class="justify-center checkboxWrapper"
                        >
                          <div
                            class="v-simple-checkbox v-simple-checkbox--disabled"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--disabled mdi mdi-checkbox-blank-outline theme--light"
                              />
                            </div>
                          </div>
                        </z-flex-stub>
                      </td>
                      <td
                        class="pt-1 pb-1 clickable"
                      >
                        <div>
                          <time
                            datetime="19:00"
                          >
                            19:00
                          </time>
                          <span>
                            〜
                          </span>
                          <time
                            datetime="23:20"
                          >
                            23:20
                          </time>
                        </div>
                        <div>
                          <!---->
                          居宅：身体介護
                        </div>
                      </td>
                      <td
                        class="text-right"
                      >
                        4.3
                      </td>
                      <td
                        class="text-right"
                      >
                        1.5
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td>
                        <!---->
                      </td>
                    </tr>
                    <tr
                      class="dummyRow"
                    />
                  </tbody>
                </table>
              </div>
            </div>
          </z-overflow-shadow-stub>
        </v-col-stub>
      </v-row-stub>
      <!---->
      <v-row-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
        <v-col-stub
          cols="12"
          md="6"
          tag="div"
        >
          <div
            class="v-data-table v-data-table--dense theme--light"
          >
            <div
              class="v-data-table__wrapper"
            >
              <table>
                <thead>
                  <tr>
                    <td>
                      サービス区分
                    </td>
                    <td
                      class="text-right"
                    >
                      予定時間数計
                    </td>
                    <td
                      class="text-right"
                    >
                      実績時間数計
                    </td>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      居宅介護:身体介護
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                  </tr>
                  <tr>
                    <td>
                      居宅介護:通院等介助（身体を伴う）
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                  </tr>
                  <tr>
                    <td>
                      居宅介護:家事援助
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                  </tr>
                  <tr>
                    <td>
                      居宅介護:通院等介助（身体を伴わない）
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                  </tr>
                  <tr>
                    <td>
                      重度訪問介護
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                  </tr>
                  <tr>
                    <td>
                      重度訪問介護（移動介護）
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                    <td
                      class="text-right"
                    >
                      100.00
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        class="pt-4"
        dense="true"
        justify="end"
        tag="div"
      >
        <v-col-stub
          class="d-flex justify-center"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-copy-plans=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M2,2H16V16H2V2M22,8V22H8V18H18V8H22M4,4V14H14V4H4Z
            </v-icon-stub>
            前月から予定をコピー
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="accent"
            data-save=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
            </v-icon-stub>
            保存
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="accent"
            data-remand=""
          >
            <v-icon-stub
              left=""
            >
              M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
            </v-icon-stub>
            予実を作成中にする
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex mt-2 mt-md-0"
          cols="12"
          md="3"
          ordermd="first"
          tag="div"
        >
          <a
            class="v-btn-stub"
            color="danger"
            data-delete-dws-provision-report-button=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
            </v-icon-stub>
            削除
          </a>
        </v-col-stub>
      </v-row-stub>
    </v-container-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-dws-provision-report-item-browsing-dialog-stub
    target=""
    width="75%"
  />
  <!---->
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
</div>
`;
